--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ body {
     padding: 1rem;
     text-align: center;
     transition: all 0.15s;
+    z-index: 100;
 }
 
 .answer {
@@ -50,19 +51,19 @@ body {
 }
 
 .answer__container--green {
-    background-color: var(--green);
+    background-image: linear-gradient(to top left, #39b385, #9be15d);
 }
 
 .answer__container--red {
-    background-color: var(--red);
+    background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
 .answer__container--yellow {
-    background-color: var(--yellow);
+    background-image: linear-gradient(to top left, #ffb003, #ffcb03);
 }
 
 .answer__container--blue {
-    background-color: var(--blue);
+    background: linear-gradient(to top left, #6092cf, #80b7e7);
 }
 
 .progress__bar {
@@ -149,8 +150,8 @@ body {
     }
 
     .answer__container {
-        padding: 3rem;
-        width: 30rem;
+        padding: 2.5rem;
+        width: 28rem;
     }
 
     .answer__container:hover {
@@ -164,13 +165,13 @@ body {
 
 /*-------------------- RESULTS SECTION --------------------*/
 .final__results {
-    background-color: var(--blue);
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+    background: linear-gradient(to top left, #6092cf, #80b7e7);
+    box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.34);
     border-radius: 15px;
     padding: 2rem 5rem;
     margin: 4rem auto 0;
     text-align: center;
-    width: 7rem;
+    width: 12rem;
 }
 
 .final__title {
@@ -187,27 +188,36 @@ body {
     font-size: 2rem;
 }
 
-.play__again {
-    color: white;
-    background-color: var(--green);
-    border-radius: 15px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-decoration: none;
-    margin-top: 2rem;
-    padding: 2rem 3rem;
-    transition: all 0.15s;
+.name__input {
+    background-color: var(--light);
+    border: none;
+    border-radius: 50px;
+    margin: 3rem 0 2rem;
+    padding: 0.8rem 0;
+    text-align: center;
+    transition: all 0.3s;
 }
 
-.play__again:hover {
-    color: var(--dark);
-    background-color: var(--yellow);
+.name__input:focus {
+    outline: none;
+    background-color: white;
+}
+
+::placeholder {
+    text-align: center;
+}
+
+.name__submit {
+    background-color: var(--light);
+    border: none;
+    border-radius: 15px;
+    padding: 1.2rem 4rem;
 }
 
 @media only screen and (min-width: 768px) {
     .final__results {
         width: 30rem;
-        padding: 5rem;
+        padding: 2rem 5rem;
         margin: 0;
     }
 
@@ -222,6 +232,35 @@ body {
 
     .em-tada {
         font-size: 3rem;
+    }
+
+    .name__input {
+        padding: 1.8rem 3rem;
+    }
+
+    ::placeholder {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .name__submit {
+        cursor: pointer;
+        font-size: 1.4rem;
+        padding: 1.8rem 5rem;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .name__input {
+        padding: 1rem 2rem;
+    }
+
+    ::placeholder {
+        font-size: 1rem;
+    }
+
+    .name__submit {
+        font-size: 1rem;
+        padding: 1rem 5rem;
     }
 }
 
